# cashbox

./: .gitignore  README.md  pyproject.toml  pytest.ini
api/v1/: permissions.py  urls.py
api/v1/common/: serializers.py  services.py  urls.py  views.py
api/v1/common/tests/: conftest.py  factories.py  test_organization_service.py
api/v1/users/: serializers.py  services.py  urls.py  views.py
api/v1/users/test/: test_employee.py
api/v1/users/tests/: authentications.py  conftest.py  employee_service_test.py  factories.py  factory.py  test_employee_service.py  test_serializers.py  test_services.py  test_views.py
api/v1/users/tests/other/: authentications.py  test_employee_service.py
common/: admin.py  models.py
common/migrations/: 0001_initial.py  0002_initial.py  0003_alter_cashbox_is_active_alter_inputcash_is_active_and_more.py
conf/: settings.py
deploy/: requirements.txt
users/: admin.py  managers.py  models.py  validators.py
users/migrations/: 0001_initial.py  0002_alter_employee_name_alter_employee_organization.py
